# cadence

./: .gitignore  README.md  api.py  cadence.py  main.py  prompt.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Progress.jsx  Results.jsx  Upload.jsx
src/: classifier.py  counter.py  extractor.py  generator.py  output.py  pose.py
