[project]
name = "cadence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "google-generativeai>=0.8.6",
    "mediapipe>=0.10.33",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.22",
    "scipy>=1.17.1",
    "uvicorn>=0.42.0",
]
